ARC-3626: fix spacing between label and download button

--- a/src/modules/account/components/MaterialRequestDetailBlade/MaterialRequestDetailBlade.module.scss
+++ b/src/modules/account/components/MaterialRequestDetailBlade/MaterialRequestDetailBlade.module.scss
@@ -151,8 +151,17 @@
 		}
 	}
 
-	&__download-message {
-		color: abstracts.$grey;
-		font-size: abstracts.$font-size-base;
+	&__download {
+		&-message {
+			color: abstracts.$grey;
+			font-size: abstracts.$font-size-base;
+			display: flex;
+			align-items: start;
+			flex-direction: row;
+		}
+
+		&-button {
+			margin-left: abstracts.$spacer-sm;
+		}
 	}
 }
